# rust-xlsb-writer

./: Cargo.toml  README.md
.github/: FUNDING.yml
src/: lib.rs
src/core/: mod.rs
src/core/biff/: biff_data.rs  biff_id.rs  biff_record.rs  biff_scanner.rs  biff_size.rs  common.rs  mod.rs
