[package]
name = "rust-xlsb-writer"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/SaelKimberly/rust-xlsb-writer"
documentation = "https://github.com/SaelKimberly/rust-xlsb-writer"
repository = "https://github.com/SaelKimberly/rust-xlsb-writer"
authors = ["SaelKimberly"]
license = "Apache-2.0"
readme = "README.md"

keywords = ["data", "xlsb", "excel", "arrow"]
categories = ["encoding"]

[dependencies]
strum = "0.26.3"
strum_macros = "0.26.4"
const-utf16 = "0.2.1"
encoding_rs = "0.8.35"
once_cell = "1.20.2"
bitflags = "2.6.0"
chrono = "0.4.39"
arrow = { version = "53.3.0", features = ["chrono-tz"] }
tempfile = "3.14.0"
ndarray = "0.16.1"
serde_yaml = "0.9.34-deprecated"

[features]
test = []
